@@ -27,11 +27,10 @@
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <java.version>1.8</java.version>
-    <javac.version>9+181-r4173-1</javac.version>
+    <java.version>11</java.version>
     <guava.version>28.1-jre</guava.version>
     <truth.version>1.0.1</truth.version>
-    <googlejavaformat.version>1.7</googlejavaformat.version>
+    <googlejavaformat.version>1.9</googlejavaformat.version>
     <junit5.version>5.6.2</junit5.version>
     <jqwik.version>1.3.0</jqwik.version>
     <javapackagetest.version>1.0</javapackagetest.version>
@@ -52,12 +51,6 @@
         <groupId>com.google.guava</groupId>
         <artifactId>guava</artifactId>
         <version>${guava.version}</version>
-      </dependency>
-      <!-- OpenJDK's langtools mirror -->
-      <dependency>
-        <groupId>com.google.errorprone</groupId>
-        <artifactId>javac-shaded</artifactId>
-        <version>${javac.version}</version>
       </dependency>
       <!-- Google java format -->
       <dependency>
@@ -129,8 +122,20 @@
         <artifactId>maven-javadoc-plugin</artifactId>
         <version>3.2.0</version>
         <configuration>
-          <source>8</source>
+          <source>${java.version}</source>
           <javadocExecutable>${java.home}/bin/javadoc</javadocExecutable>
+          <links>
+            <link>https://docs.oracle.com/en/java/javase/11/docs/api</link>
+          </links>
+          <additionalJOptions>
+            <additionalJOption>--add-exports=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED,com.google.googlejavaformat</additionalJOption>
+            <additionalJOption>--add-exports=jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED,com.google.googlejavaformat</additionalJOption>
+            <additionalJOption>--add-exports=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED,com.google.googlejavaformat</additionalJOption>
+            <additionalJOption>--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED,com.google.googlejavaformat</additionalJOption>
+            <additionalJOption>--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED,com.google.googlejavaformat</additionalJOption>
+            <additionalJOption>--add-exports=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED,com.google.googlejavaformat</additionalJOption>
+            <additionalJOption>--add-exports=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED,com.google.googlejavaformat</additionalJOption>
+          </additionalJOptions>
         </configuration>
         <executions>
           <execution>
